delete swagger
