# docs/swagger.yaml
@@ -81,6 +81,29 @@ info:
   title: TES SWAGGER ULBI
   version: "1.0"
 paths:
+  /delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data menu.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data menu.
+      tags:
+      - Menu
   /insert:
     post:
       consumes:
